--- a/src/style.css
+++ b/src/style.css
@@ -54,6 +54,7 @@ body{
     background-color: rgb(246, 77, 77);
 }
 .done{
+
     background-color: rgb(71, 198, 67);
 }
 .hg{
@@ -62,6 +63,8 @@ body{
 
 td{
     padding-left: 5px;
+    padding: 10px !important;
+    margin: 5px;
 }
 a{
     font-weight: bolder;
@@ -70,3 +73,5 @@ a{
 .todo{
     color: tomato;
 }
+
+    
