--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,9 @@ font-weight: bolder;
 .task{
     display: flexbox;
     flex-direction: row;
+  margin-left: auto;
+  margin-right: auto;
+    padding: 20px;
 }
 .main{
     color: rgb(67, 67, 67);
@@ -38,9 +41,8 @@ font-weight: bolder;
 }
 .data{
     padding: 20px;
-    
-    margin-left: 8.3%;
-    margin-right: 5%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 body{
